fixed changeset error return/display

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
 
+# Lexical LS local files
+.lexical/
+
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
