switch to more versatile config value management

--- a/.envrc_template
+++ b/.envrc_template
@@ -1,2 +1,2 @@
-export OPENAPI_KEY="YOUR_OPENAPI_KEY"
-export OPENAPI_ORG_ID="YOUR_OPENAPI_ORG_ID"
+export OPENAI_KEY="YOUR_OPENAI_KEY"
+export OPENAI_ORG_ID="YOUR_OPENAI_ORG_ID"
