--- a/.envrc_template
+++ b/.envrc_template
@@ -1,2 +1,3 @@
-export OPENAI_API_KEY="YOUR_OPENAI_KEY"
+export OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
 export OPENAI_ORG_ID="YOUR_OPENAI_ORG_ID"
+export ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_KEY"
