added support for live ChatGoogleAI tests

--- a/.envrc_template
+++ b/.envrc_template
@@ -1,3 +1,4 @@
 export OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
 export OPENAI_ORG_ID="YOUR_OPENAI_ORG_ID"
 export ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_KEY"
+export GOOGLE_API_KEY="YOUR_GOOGLE_API_KEY"
