--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -15,6 +15,8 @@ env:
   OPENAI_API_KEY: invalid
   ANTHROPIC_API_KEY: invalid
   GOOGLE_API_KEY: invalid
+  AWS_ACCESS_KEY_ID: invalid
+  AWS_SECRET_ACCESS_KEY: invalid
 
 permissions:
   contents: read
