Azure test for ChatOpenAI usage

--- a/.envrc_template
+++ b/.envrc_template
@@ -4,3 +4,5 @@ export ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_KEY"
 export GOOGLE_API_KEY="YOUR_GOOGLE_API_KEY"
 export AWS_ACCESS_KEY_ID="YOUR_AWS_ACCESS_KEY_ID"
 export AWS_SECRET_ACCESS_KEY="YOUR_AWS_SECRET_ACCESS_KEY"
+export AZURE_OPENAI_ENDPOINT="YOUR_AZURE_MODEL_ENDPOINT"
+export AZURE_OPENAI_KEY="YOUR_AZURE_ENDPOINT_KEY"
