--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,6 +2,8 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
+#
+# https://github.com/erlef/setup-beam/tree/v1.18.2
 
 name: Elixir CI
 
@@ -17,6 +19,7 @@ env:
   GOOGLE_API_KEY: invalid
   AWS_ACCESS_KEY_ID: invalid
   AWS_SECRET_ACCESS_KEY: invalid
+  AWS_REGION: invalid
 
 permissions:
   contents: read
@@ -28,12 +31,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Elixir
-      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
+    - uses: actions/checkout@v4
+      name: Set up Elixir
+    - uses: erlef/setup-beam@v1
       with:
-        elixir-version: '1.15.2' # [Required] Define the Elixir version
-        otp-version: '26.0'      # [Required] Define the Erlang/OTP version
+        elixir-version: 'v1.18.1-otp-27' # [Required] Define the Elixir version
+        otp-version: 'OTP-27.0'      # [Required] Define the Erlang/OTP version
     - name: Restore dependencies cache
       uses: actions/cache@v3
       with:
