support streaming responses from mistral

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -21,6 +21,7 @@ env:
   AWS_SECRET_ACCESS_KEY: invalid
   AWS_REGION: invalid
   PERPLEXITY_API_KEY: invalid
+  MISTRAL_API_KEY: invalid
 
 permissions:
   contents: read
