--- a/.envrc_template
+++ b/.envrc_template
@@ -7,3 +7,4 @@ export AWS_SECRET_ACCESS_KEY="YOUR_AWS_SECRET_ACCESS_KEY"
 export AZURE_OPENAI_ENDPOINT="YOUR_AZURE_MODEL_ENDPOINT"
 export AZURE_OPENAI_KEY="YOUR_AZURE_ENDPOINT_KEY"
 export PERPLEXITY_API_KEY="YOUR_PERPLEXITY_API_KEY"
+export MISTRAL_API_KEY="YOUR_MISTRAL_API_KEY"
