--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -22,6 +22,7 @@ env:
   AWS_REGION: invalid
   PERPLEXITY_API_KEY: invalid
   MISTRAL_API_KEY: invalid
+  VERTEX_API_KEY: invalid
 
 permissions:
   contents: read
