Add env var for endpoint.

--- a/.envrc_template
+++ b/.envrc_template
@@ -9,3 +9,4 @@ export AZURE_OPENAI_KEY="YOUR_AZURE_ENDPOINT_KEY"
 export PERPLEXITY_API_KEY="YOUR_PERPLEXITY_API_KEY"
 export MISTRAL_API_KEY="YOUR_MISTRAL_API_KEY"
 export VERTEX_API_KEY="YOUR_VERTEX_API_KEY"
+export VERTEX_API_ENDPOINT="YOUR_VERTEX_API_ENDPOINT"
