Add enpoint env var to GitHub workflow.

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -23,6 +23,7 @@ env:
   PERPLEXITY_API_KEY: invalid
   MISTRAL_API_KEY: invalid
   VERTEX_API_KEY: invalid
+  VERTEX_API_ENDPOINT: invalid
 
 permissions:
   contents: read
