feat: add DeepSeek chat model integration
- Add ChatDeepSeek module for DeepSeek API integration
- Add comprehensive test suites
- Update documentation and package configuration
- Add DEEPSEEK_API_KEY to environment template

--- a/.envrc_template
+++ b/.envrc_template
@@ -10,3 +10,4 @@ export PERPLEXITY_API_KEY="YOUR_PERPLEXITY_API_KEY"
 export MISTRAL_API_KEY="YOUR_MISTRAL_API_KEY"
 export VERTEX_API_KEY="YOUR_VERTEX_API_KEY"
 export VERTEX_API_ENDPOINT="YOUR_VERTEX_API_ENDPOINT"
+export DEEPSEEK_API_KEY="YOUR_DEEPSEEK_API_KEY"
