Resolve dialyzer type inference issues across codebase
- Fixed guard clause failures in LLMChain initial_run_logging function
- Updated @spec annotations to include missing types in ChatAnthropic
- Fixed TokenUsage.set/2 contract to be more flexible with metadata types
- Resolved Utils.handle_stream_fn/3 contract issues in multiple chat models
- Fixed changeset function calls in DeepResearch modules with proper type unions
- Added missing module declarations to DeepResearch embedded schemas
- Updated function pattern matching to avoid unreachable clauses
- Fixed variable naming and underscore warnings throughout codebase

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -70,5 +70,8 @@ jobs:
       - run: mix compile --warnings-as-errors
         if: ${{ matrix.lint }}
 
+      - run: mix dialyzer
+        if: ${{ matrix.lint }}
+
       - name: Run tests
         run: mix test
